fixed footer spacing

--- a/zeekr.css
+++ b/zeekr.css
@@ -312,6 +312,7 @@ a:hover {
   gap: 60px;
   align-items: flex-start;
   width: 100%;
+  justify-content: space-between;
 }
 .logo1 {
   width: 40px;
